AC_INIT([fiber], [1.0.0], [fiber-maintainer@fateware.com])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PROG_RANLIB
#AM_PROG_AR
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 libs/fiber1/Makefile
 libs/fiber2/Makefile
 libs/Makefile
 programs/Makefile
 programs/fiber_program1/Makefile
 programs/fiber_program2/Makefile
 programs/fiber_print_env/Makefile
 fiber.pc
 libfiber1.pc
 libfiber2.pc
])
AC_OUTPUT
