AC_INIT([fructose], [3.4.5], [fructose-maintainer@fateware.com])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PROG_RANLIB
#AM_PROG_AR
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 libs/fructose1/Makefile
 libs/fructose2/Makefile
 libs/Makefile
 programs/Makefile
 programs/fructose_program1/Makefile
 programs/fructose_program2/Makefile
 programs/fructose_print_env/Makefile
 fructose.pc
 libfructose1.pc
 libfructose2.pc
])
AC_OUTPUT
