AC_INIT([template], [1.0.0], [template-maintainer@fateware.com])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PROG_RANLIB
#AM_PROG_AR
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 libs/template1/Makefile
 libs/template2/Makefile
 libs/Makefile
 programs/Makefile
 programs/template_program1/Makefile
 programs/template_program2/Makefile
 template.pc
 libtemplate1.pc
 libtemplate2.pc
])
AC_OUTPUT
