AC_INIT([apple], [1.2.3], [apple-maintainer@fateware.com])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PROG_RANLIB
#AM_PROG_AR
#PKG_PROG_PKG_CONFIG(0.16)
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 libs/apple1/Makefile
 libs/apple2/Makefile
 libs/Makefile
 programs/Makefile
 programs/apple_program1/Makefile
 programs/apple_program2/Makefile
 apple.pc
 libapple1.pc
 libapple2.pc
])
AC_OUTPUT
