AC_INIT([water], [1.0.0], [water-maintainer@fateware.com])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PROG_RANLIB
#AM_PROG_AR
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 libs/water1/Makefile
 libs/water2/Makefile
 libs/Makefile
 programs/Makefile
 programs/water_program1/Makefile
 programs/water_program2/Makefile
 water.pc
 libwater1.pc
 libwater2.pc
])
AC_OUTPUT
